# gentoo_dev

./: .gitignore  README.md  check_linux_patch_patches.py  check_updates.py  dev_settings.toml.example  push_changes.py  pyproject.toml  requirements.txt  start_cron_update.sh  update_linux_patches.py  update_packages.py  update_patches.py
git/: gentoo_repository_config
gkernel_dev_cli/: __init__.py  cli.py
gkernel_dev_cli/lib/: __init__.py  git_helpers.py  kernel_org.py
gkernel_dev_cli/resources/git/: linux_patches_config
gkernel_dev_cli/resources/scripts/: diff_check.py  gentoo_sources.py  git_scraper.py  kpatch.py  manual_email.sh  rt_scraper.py  vanilla_scraper.py
gkernel_dev_cli/resources/scripts/linux-patches/: get_file_list.py  gkernel_up.sh  patches_test.sh
gkernel_dev_cli/resources/templates/: README_bottom.jinja  gentoo-sources_6_6.jinja2  gentoo-sources_loong.jinja2  git-sources.jinja2  rt-sources.yaml  rt-sources_until_5.4.yaml
gkernel_dev_cli/workflows/: check_rt_changes.py  push_changes.py  update_linux_patches.py  update_packages.py  update_patches.py
irc_bot/: bot.py  bot_irc_daemon.py
scripts/: diff_check.py  fix_symlinks.sh  gentoo_sources.py  git_scraper.py  kpatch.py  rt_scraper.py  vanilla_scraper.py
scripts/linux-patches/: get_file_list.py  get_last_version.sh  gkernel_up.sh
scripts/linux-patches/buildbot/: format.py
templates/: README_body.jinja  README_head.jinja  gentoo-sources.jinja2  gentoo-sources_5_15.jinja2  gentoo-sources_6_6.jinja2  gentoo-sources_loong.jinja2  git-sources.jinja2
tools/: links.sh
(+1 files in other folders)
