[tool.poetry]
name = "gkernel-dev"
version = "0.0.1"
description = "Standalone CLI for Gentoo kernel source maintenance workflows"
authors = ["alicef@gentoo.org"]
readme = "README.md"
packages = [{ include = "gkernel_dev_cli" }]
include = [
  { path = "gkernel_dev_cli/resources/**", format = ["sdist", "wheel"] },
]


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32"
beautifulsoup4 = "^4.12"
lxml = "^5.0"
GitPython = "^3.1"
alive-progress = "^3.1"
toml = "^0.10"

[tool.poetry.scripts]
gkernel-dev = "gkernel_dev_cli.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
